src/app/app-styles.scss
/* ... */
@media (min-width: 600px) {
  .welcome__trusat-tagline {
    font-size: 24px;
    line-height: 37px;
    margin: 1em 0;
  }
}

.welcome__globe-image {
  margin-top: -3em;
}

@media (min-width: 600px) {
  .welcome__globe-image {
    max-width: 800px;
    margin-top: -8em;
  }
}

.welcome__title-intro-wrapper {
  margin: -2em 1em 1em 1em;
  text-align: center;
}

@media (min-width: 600px) {
  .welcome__title-intro-wrapper {
    margin: -7em 2em 1em 2em;
  }
}

.welcome_arrow-wrapper {
  width: 100%;
  text-align: center;
}

.welcome__arrow-image {
  max-width: 20px;
}

.welcome__illustration-join-wrapper {
  display: flex;
  justify-content: space-between;
  margin: 0 0 8em 0;
}

@media (min-width: 600px) {
  .welcome__illustration-join-wrapper {
    margin-bottom: 10em;
  }
}

@media (max-width: 770px) {
  .welcome__illustration-join-wrapper {
    flex-wrap: wrap;
  }
  // flip middle join wrapper order on mobile
  .welcome__illustration-join-wrapper--center {
    flex-direction: column-reverse;
  }
}

.welcome__illustration {
  height: auto;
  width: 100%;
}

@media (min-width: 600px) {
  .welcome__illustration {
    width: 360px;
    height: auto;
  }

  .welcome__illustration-wrapper--left {
    margin-right: 3em;
  }

  .welcome__illustration-wrapper--right {
    margin-left: 3em;
  }
}

@media (max-width: 770px) {
  .welcome__illustration-wrapper--left,
  .welcome__illustration-wrapper--right {
    margin: 0 auto;
  }
}

.welcome__join-copy-wrapper {
  flex-wrap: wrap;
}

.welcome__sub-header--white {
  margin: 0.25em 0em;
}

@media (min-width: 600px) {
  .welcome__sub-header--nowrap {
    white-space: nowrap;
  }
}

.welcome__join-button {
  margin-top: 1em;
}

@media (min-width: 600px) {
  .welcome__sub-header--white {
    margin-bottom: none;
  }

  .welcome__join-button {
    margin-top: none;
  }
}

.welcome__iframe-wrapper {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 2em;
  height: 0;
  overflow: hidden;
  margin: 1em auto 1.5em;
}

@media (min-width: 600px) {
  .welcome__iframe-wrapper {
    margin-bottom: 2em;
    max-width: 890px;
  }
}

.welcome__iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.welcome__input-button-wrapper {
  display: flex;
  position: relative;
  height: 40px;
  margin-top: 1em;
  max-width: 550px;
  width: 95%;
}

@media (min-width: 600px) {
  .welcome__input-button-wrapper {
    width: 100%;
  }
}

.welcome__input {
  background: transparent;
  border: 1px solid $primary-text-color;
  box-sizing: border-box;
  flex: 1;
  font-family: roboto;
  font-size: 20px;
  padding-left: 0.5em;
  width: 400px;
}

.welcome__input::placeholder {
  color: $primary-text-color;
}

.welcome__input--white {
  border: 1px solid $primary-text-color;
  color: $primary-text-color;
}

.welcome__input--white::placeholder {
  color: $primary-text-color;
}

.welcome__subscribe-button {
  position: absolute;
  height: 40px;
  right: -15px;
  vertical-align: center;
}

@media (min-width: 600px) {
  .welcome__subscribe-button {
    right: -20px;
  }
}

.welcome__sub-header--black {
  color: $primary-theme-color;
  font-size: 48px;
  font-style: normal;
  font-weight: bold;
  line-height: 59px;
}

.welcome__sub-header--white {
  font-size: 32px;
  font-style: normal;
  font-weight: bold;
  line-height: 39px;
}

@media (min-width: 600px) {
  .welcome__sub-header--white {
    font-size: 48px;
    line-height: 59px;
  }
}

.welcome__large-copy {
  font-size: 24px;
  line-height: 30px;
  margin-bottom: 0.5em;
}

.welcome__large-copy--bold {
  font-size: 24px;
  font-weight: bold;
  line-height: 30px;
  margin-bottom: 0.25em;
}

@media (min-width: 600px) {
  .welcome__large-copy {
    font-size: 48px;
    line-height: 60px;
  }

  .welcome__large-copy--bold {
    font-size: 48px;
    line-height: 60px;
  }
}

.welcome__medium-copy--white {
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 2em;
}

.welcome__medium-copy--smaller-bottom {
  margin-bottom: 1em;
}

@media (min-width: 600px) {
  .welcome__medium-copy--white {
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 3.5em;
    padding: 0 25%;
  }

  .welcome__medium-copy--smaller-bottom {
    margin-bottom: 1em;
  }
}

.welcome__medium-copy--last {
  margin-bottom: 1em;
}

.welcome__small-copy--black {
  color: #081122;
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 12px;
}

.welcome__small-copy--white {
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 12px;
}

.welcome__small-copy--bold {
  font-weight: bold;
  font-size: 18px;
}

.welcome__small-copy__ul {
  display: flex;
  flex-direction: column;
  list-style: disc outside;
  margin-left: 1.1em;
  font-size: 18px;
  line-height: 22px;
}

.welcome__small-copy__li {
}

.welcome__small-copy__ul li {
  margin-bottom: 0.5em;
}

@media (min-width: 600px) {
  .welcome__small-copy--black {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 0.75em;
  }

  .welcome__small-copy--white {
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 0.75em;
  }
}

.welcome__small-copy--emoticon {
  font-size: 18px;
  white-space: nowrap;
}

.welcome__partners-wrapper {
  padding: 0;
}

.welcome__partners-list__logo-wrapper {
  flex-basis: 160px;
  font-size: $small-font-size;
  line-height: 20px;
  margin-right: 20px;
  margin-bottom: 30px;
  text-align: center;
}

.welcome__partners-list__logo-wrapper:last-child {
  margin-right: 0;
}

.welcome__partners-list__logo-wrapper > a {
  text-decoration: none;
}

.welcome__partners-list__logo {
  width: 100%;
}

.welcome__mailing-list-wrapper {
  padding: 0 1.5em 0 0;
}

/* ----------
JOIN VIEW 
---------- */
.join__wrapper {
  margin: 0 1em;
  padding: 2em 1em;
}

@media (min-width: 600px) {
  .join__wrapper {
    padding: 3em 4em;
    margin: 0 auto;
    max-width: 1000px;
  }
}

.join__header {
  margin-bottom: 3em;
  text-align: center;
}

@media (min-width: 600px) {
  .join__header {
    margin-bottom: 6em;
  }
}
/* ... */

